grobe Struktur steht

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</nav>
 
 			<form>
-				<input type='text' id="searchAuthor"  name='title' placeholder='title..'>
+				<input type='text' id="searchAuthor"  name='title' placeholder='Enter title..'>
 				<button type='submit' id='save'>save</button>
 				<button type='submit' id='details'>I want more details</button>
 			</form>
