--- a/new.html
+++ b/new.html
@@ -23,11 +23,18 @@
 					</li>
 				</ol>
 			</nav>
-
-			
 		</header>
 
 		<main>
+			<button>ImagePlaceholder</button>
+
+			<input type='text' id="title"  placeholder='Enter title..'>
+
+			<button>Record</button>
+
+			<input type='text' id="description"  placeholder='Description..'>
+
+			<button>I want more details!</button>
       		
 		</main>
 	</body>
