--- a/liste.html
+++ b/liste.html
@@ -5,6 +5,9 @@
 	</head>
 
 	<body>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src='JS/liste.js'></script>
+
 		<header>
 			<nav>
 				<ol>
@@ -28,6 +31,7 @@
 		<main>
 
 			<ol id='eventlist'></ol>
+			<p id="test"></p>
       		
 		</main>
 	</body>
