--- a/event.html
+++ b/event.html
@@ -5,6 +5,9 @@
 	</head>
 
 	<body>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src='JS/event.js'></script>
+
 		<header>
 			<nav>
 				<ol>
