Text speichern und auslesen mit localStorage

--- a/liste.html
+++ b/liste.html
@@ -21,10 +21,11 @@
 			</nav>
 
 			<form>
-				<input type='text' id="searchAuthor"  name='title' placeholder='Enter title..'>
+				<input type='text' id="searchAuthor" name='title' placeholder='Enter title..'>
 				<button type='submit' id='save'>save</button>
-				<button type='submit' id='details'>I want more details</button>
 			</form>
+
+			<a href='new.html'>I want more details..</a>
 			
 		</header>
 
