--- a/new.html
+++ b/new.html
@@ -5,21 +5,20 @@
 	</head>
 
 	<body>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src='JS/new.js'></script>
+
 		<header>
 			<nav>
 				<ol>
 					<li>
-						<form>
-							<button type='submit'>Cancel</button>
-						</form>
+						<a href='liste.html'>List</a>
 					</li>
 					<li>
 						<img>Logo</img>
 					</li>
 					<li>
-						<form>
-							<button type='submit'>Save</button>
-						</form>			
+						<input type='button' id='save' value='Save'>
 					</li>
 				</ol>
 			</nav>
