--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			<form>
 				<input type='text' id="searchAuthor"  name='title' placeholder='Enter title..'>
 				<button type='submit' id='save'>save</button>
-				<button type='submit' id='details'>I want more details</button>
 			</form>
+
+			<a href='new.html'>I want more details..</a>
 
 		</header>
 
