in edit version fields in new doc are filled with entry

--- a/event.html
+++ b/event.html
@@ -12,17 +12,13 @@
 			<nav>
 				<ol>
 					<li>
-						<form>
-							<button type='submit'>Cancel</button>
-						</form>
+						<a href='index.html'>Map</a>
 					</li>
 					<li>
 						<img>Logo</img>
 					</li>
 					<li>
-						<form>
-							<button type='submit'>Save</button>
-						</form>			
+						<a href="./new.html" id='edit'>Edit</a>		
 					</li>
 				</ol>
 			</nav>
@@ -30,7 +26,7 @@
 		</header>
 
 		<main>
-			<p id='title'>MyTitle</>
+			<p id='title'>MyTitle</p>
 		</main>
 	</body>
 <html>
