--- a/new.html
+++ b/new.html
@@ -12,7 +12,7 @@
 			<nav>
 				<ol>
 					<li>
-						<a href='liste.html'>List</a>
+						<a href='liste.html'>Cancel</a>
 					</li>
 					<li>
 						<img>Logo</img>
@@ -33,7 +33,7 @@
 
 			<input type='text' id="description"  placeholder='Description..'>
 
-			<button>I want more details!</button>
+			<button id='details'>I want more details!</button>
       		
 		</main>
 	</body>
