--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</nav>
 
 			<form>
-				<input type='text' id="searchAuthor"  name='title' placeholder='Enter title..'>
+				<input type='text' id='title' placeholder='Enter title..'>
 				<button type='submit' id='save'>save</button>
 			</form>
 
