--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@
 						<img>Logo</img>
 					</li>
 					<li>
-						<input type='button' id='save' value='Save'>
+						<a href="index.html" id='save'>save</a>	
 					</li>
 				</ol>
 			</nav>
