afer new stuff / changes saved, jumps to former site

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<button type='submit' id='save'>save</button>
 			</form>
 
-			<a href='new.html'>I want more details..</a>
+			<a href='new.html?formersite=index'>I want more details..</a>
 
 		</header>
 
