--- a/liste.html
+++ b/liste.html
@@ -25,7 +25,7 @@
 				<button type='submit' id='save'>save</button>
 			</form>
 
-			<a href='new.html'>I want more details..</a>
+			<a href='new.html?formersite=liste'>I want more details..</a>
 			
 		</header>
 
