--- a/event.html
+++ b/event.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Liste</title>
+		<link rel='stylesheet' href='style.css'>
 	</head>
 
 	<body>
@@ -26,7 +27,6 @@
 		</header>
 
 		<main>
-			<p id='title'>MyTitle</p>
 		</main>
 	</body>
 <html>
