--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	</head>
 
 	<body>
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src='JS/index.js'></script>
+
 		<header>
 			<nav>
 				<ol>
@@ -26,9 +30,9 @@
 			<a href='new.html?formersite=index'>I want more details..</a>
 
 		</header>
-
-		<main>
-      		
+     	
+     	<main>
+			<div id="map-canvas">Please allow us to use your current location so you can appreciate all of our app functions</div>
 		</main>
 	</body>
 <html>
