i think i finished pins o.0

--- a/new.html
+++ b/new.html
@@ -36,6 +36,10 @@
 			<input type='text' id="description"  placeholder='Description..'>
 
 			<button id='details'>I want more details!</button>
+
+			<input type='text' id="longitude" style="visibility:hidden">
+
+			<input type='text' id="latitude" style="visibility:hidden">
       		
 		</main>
 	</body>
