everything is added automatically where it can

--- a/new.html
+++ b/new.html
@@ -40,7 +40,12 @@
 			<input type='text' id="longitude" style="visibility:hidden">
 
 			<input type='text' id="latitude" style="visibility:hidden">
-      		
+
+			<input type='text' id="time" style="visibility:hidden">
+
+			<input type='text' id="date" style="visibility:hidden">
+
+			<p id="location"></p>
 		</main>
 	</body>
 <html>
