--- a/event.html
+++ b/event.html
@@ -6,6 +6,7 @@
 	</head>
 
 	<body>
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src='JS/event.js'></script>
 
