alert when saved

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src='JS/index.js'></script>
 
 		<header>
+
 			<nav>
 				<ol>
 					<li>
@@ -22,10 +23,8 @@
 				</ol>
 			</nav>
 
-			<form>
-				<input type='text' id='title' placeholder='Enter title..'>
-				<button type='submit' id='save'>save</button>
-			</form>
+			<input type='text' id='title' placeholder='Enter title..'>
+			<a href='index.html' id='save'>save</a>
 
 			<a href='new.html?formersite=index'>I want more details..</a>
 
