--- a/liste.html
+++ b/liste.html
@@ -21,10 +21,8 @@
 				</ol>
 			</nav>
 
-			<form>
-				<input type='text' id='title' placeholder='Enter title..'>
-				<button type='submit' id='save'>save</button>
-			</form>
+			<input type='text' id='title' placeholder='Enter title..'>
+			<a href='liste.html' id='save'>save</a>
 
 			<a href='new.html?formersite=liste'>I want more details..</a>
 			
