--- a/new.html
+++ b/new.html
@@ -45,6 +45,24 @@
 
 			<input type='text' id="date" style="visibility:hidden">
 
+			<p>Remind me at least</p>
+			<select id='atleas'>
+  				<option value="volvo">once a year</option>
+  				<option value="saab">every six months</option>
+  				<option value="mercedes">every three months</option>
+  				<option value="audi">once a month</option>
+  				<option value="audi">never</option>
+			</select>
+
+			<p>Remind me not more than</p>
+			<select id='atleas'>
+  				<option value="volvo">once a year</option>
+  				<option value="saab">every six months</option>
+  				<option value="mercedes">every three months</option>
+  				<option value="audi">once a month</option>
+  				<option value="audi">never</option>
+			</select>
+
 			<p id="location"></p>
 		</main>
 	</body>
