we have a splash screen and limited pictures

--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
 			<div id="map-canvas">Please allow us to use your current location so you can appreciate all of our app functions</div>
 		</main>
 	</body>
+	<div id ='splash-screen'></div>
 <html>
