--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
 
 	<body>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
 		<script src='JS/new.js'></script>
 
 		<header>
@@ -26,7 +27,7 @@
 		</header>
 
 		<main>
-			<output id="picture"></output>
+			<img class='thumb' id='img'>
 			<input type="file" id='loadpicture' accept="image/*" capture="camera" />
 
 			<input type='text' id="title"  placeholder='Enter title..'>
