reminders work, or do not work. that is the question. I should learn ttd

--- a/new.html
+++ b/new.html
@@ -46,22 +46,22 @@
 
 			<input type='text' id="date" style="visibility:hidden">
 
-			<p>Remind me at least</p>
-			<select id='atleas'>
-  				<option value="volvo">once a year</option>
-  				<option value="saab">every six months</option>
-  				<option value="mercedes">every three months</option>
-  				<option value="audi">once a month</option>
-  				<option value="audi">never</option>
+			<p id='patleast' style="visibility:hidden">Remind me at least</p>
+			<select id='atleast' style="visibility:hidden">
+  				<option value="year">once a year</option>
+  				<option value="six">every six months</option>
+  				<option value="three">every three months</option>
+  				<option value="one">once a month</option>
+  				<option value="never">never</option>
 			</select>
 
-			<p>Remind me not more than</p>
-			<select id='atleas'>
-  				<option value="volvo">once a year</option>
-  				<option value="saab">every six months</option>
-  				<option value="mercedes">every three months</option>
-  				<option value="audi">once a month</option>
-  				<option value="audi">never</option>
+			<p id='pnotmore' style="visibility:hidden">Remind me not more than</p>
+			<select id='notmore' style="visibility:hidden">
+  				<option value="year">once a year</option>
+  				<option value="six">every six months</option>
+  				<option value="three">every three months</option>
+  				<option value="one">once a month</option>
+  				<option value="never">never</option>
 			</select>
 
 			<p id="location"></p>
