picture and gif in splash

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 			<div id="map-canvas">Please allow us to use your current location so you can appreciate all of our app functions</div>
 		</main>
 	</body>
-	<div id ='splash-screen'></div>
+	<div id ='splash-screen'>
+		<img id='logo' src="headerlogo.png">
+	</div>
 <html>
