pictures in liste werden richtig angezeigt und Ort in Detailansicht/

--- a/new.html
+++ b/new.html
@@ -20,7 +20,7 @@
 						<img>Logo</img>
 					</li>
 					<li>
-						<a href="junk.html" id='save'>save</a>	
+						<a id='save'>save</a>
 					</li>
 				</ol>
 			</nav>
